Cookies expired too soon since |time()| on the Mac was based on the wrong epoch.  Fixes bug #18633.  r=morse